# TriangleQt

./: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h
